<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>raibo-smd_ros</name>
  <version>0.0.1</version>
  <description>RAIBO ros2 package for sensor module development</description>
  <maintainer email="iamchoking247@gmail.com">Hyungho Chris Choi</maintainer>
  <license>MIT</license>

  <buildtool_depend>ament_cmake</buildtool_depend>

  <depend>rclcpp</depend>
  <depend>sensor_msgs</depend>
  <depend>std_msgs</depend>
  <depend>pcl_ros</depend>
  <depend>tf2_ros</depend>
  <depend>tf2_geometry_msgs</depend>
  <depend>tf2_sensor_msgs</depend>
  <depend>message_filters</depend>

  <test_depend>ament_lint_auto</test_depend>
  <test_depend>ament_lint_common</test_depend>

  <exec_depend>realsense2_camera</exec_depend>
  <exec_depend>realsense2_camera_msgs</exec_depend>

  <exec_depend>velodyne</exec_depend>
  <exec_depend>velodyne_driver</exec_depend>
  <exec_depend>velodyne_laserscan</exec_depend>
  <exec_depend>velodyne_msgs</exec_depend>
  <exec_depend>velodyne_pointcloud</exec_depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
